[tool.poetry]
name = "soap_test"
version = "0.1.0"
description = ""
authors = ["Alexey Lebedev <lebedev.alexey@protonmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
zeep = "^3.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
